# ai-session-manager

./: .gitignore  LICENSE  README.md  pyproject.toml  session-id.md
.github/workflows/: publish-pypi.yml
src/ai_session_manager/: cli.py  session_convert.py  wrapper.py
src/copilot_session/: __init__.py  cli.py  wrapper.py
src/copilot_session.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_session_convert.py  test_wrapper.py
