[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-session-manager"
version = "0.1.0"
description = "Per-project session persistence for AI CLI tools"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["ai", "cli", "session", "wrapper", "copilot", "claude", "codex", "gemini"]

[project.scripts]
ai-session-manager = "ai_session_manager.cli:main"
copilot-session = "copilot_session.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
